# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: .travis.yml  ask.py  cli.py  dvizok.py  engine.py  first_greet.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_calc_script.py  brain_even.py  brain_even_script.py  brain_games.py  brain_games_script.py  brain_gcd.py  brain_gcd_script.py  brain_prime.py  brain_prime_script.py  brain_progression.py  brain_progression_script.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
jhonnyt18_brain_games.egg-info/: PKG-INFO  SOURCES.txt
