[tool.poetry]
name = "JhonnyT18_brain_games"
version = "0.7.6"
description = "It is my first project calls brain-games. There you can play some games and check your math abilities."
authors = ["Evgenii T"]
repository = "https://github.com/JhonnyT18/python-project-lvl1"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_script:main"
brain-even = "brain_games.scripts.brain_even_script:main"
brain-calc = "brain_games.scripts.brain_calc_script:main"
brain-gcd = "brain_games.scripts.brain_gcd_script:main"
brain-progression = "brain_games.scripts.brain_progression_script:main"
brain-prime = "brain_games.scripts.brain_prime_script:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

